--- a/api-clinic/locales/en.json
+++ b/api-clinic/locales/en.json
@@ -73,7 +73,7 @@
     "subscribe_newsletter": "Subscribe to our Newsletter",
     "subscribe_button": "Subscribe",
     "google_reviews": "See our reviews on Google",
-    "copyright": "&copy; 2025 Biziondo. All rights reserved.",
+    "copyright": "© 2025 Clínica de Espalda. All rights reserved.",
     "links": "Links",
     "enter_name": "Enter your name",
     "home": "Home",
@@ -101,5 +101,189 @@
     "google_analytics_cookies_title": "Google Analytics Cookies",
     "google_analytics_cookies_description": "In the case of Google Analytics cookies, this company stores them on servers located in the United States and is committed not to share them with third parties, except in cases where it is necessary for system operation or when required by law. According to Google, it does not save your IP address. Google Inc. is a company adhered to the Safe Harbor Agreement, which guarantees that all transferred data will be treated with a level of protection in accordance with European regulations.",
     "cookie_policy_text": "This website uses cookies to ensure you get the best experience.",
-    "accept_cookies": "Accept"
+    "accept_cookies": "Accept",
+ "legal_title": "⚖️ Legal Notice",
+  "legal_last_update": "Last update:",
+  "legal_update_date": "November 2025",
+  "legal_intro_1": "Clínica Espalda Sana complies with the provisions of the ",
+  "legal_law_lssi": "Law 34/2002, of July 11, on Information Society Services and Electronic Commerce (LSSI-CE)",
+  "legal_intro_2": ", the ",
+  "legal_law_gdpr": "Regulation (EU) 2016/679 (GDPR)",
+  "legal_intro_3": " and the ",
+  "legal_law_lopdgdd": "Organic Law 3/2018 on the Protection of Personal Data and Guarantee of Digital Rights (LOPDGDD)",
+  "legal_section_1_title": "1. Identifying information of the website owner",
+  "owner": "Owner:",
+  "owner_name": "Clínica Espalda Sana",
+  "legal_address": "Address:",
+  "legal_address_value": "[Full Address], Badajoz, Extremadura, Spain",
+  "legal_email": "Email:",
+  "legal_email_address": "clinicaespaldasana@outlook.com",
+  "nif": "Tax ID:",
+  "nif_value": "[enter NIF or CIF]",
+  "phone": "Phone:",
+  "phone_value": "[contact number]",
+  "health_registration": "Health registration:",
+  "health_value": "[if applicable]",
+  "legal_section_2_title": "2. Terms of use",
+  "terms_intro_1": "Accessing and using this website grants the status of User and implies full and unconditional acceptance of the terms contained in this Legal Notice.",
+  "terms_intro_2": "If the user does not agree with the established terms, they must refrain from using the website.",
+  "terms_intro_3": "The User undertakes to make appropriate use of the content and services offered by Clínica Espalda Sana and not to use them for illegal activities or contrary to good faith and public order.",
+  "legal_section_3_title": "3. Intellectual and industrial property",
+  "intellectual_property": "All website content (texts, images, logos, icons, software, etc.) is the property of Clínica Espalda Sana or their respective authors, and is protected by national and international intellectual and industrial property regulations. Reproduction, distribution or modification without express authorization is prohibited.",
+  "legal_section_4_title": "4. Personal data protection",
+  "personal_data_intro": "Clínica Espalda Sana guarantees compliance with current personal data protection regulations. Personal data collected through the website will be processed according to the provisions of the ",
+  "privacy_policy_link": "Privacy Policy",
+  "legal_section_5_title": "5. Disclaimer",
+  "disclaimer": "Clínica Espalda Sana is not responsible for damages or losses that may arise from the misuse of the website, nor for the content of external links that may be included. It also does not guarantee the continuous availability of the site or the absence of technical errors.",
+  "legal_section_6_title": "6. Applicable law and jurisdiction",
+  "law_jurisdiction": "The relationship between Clínica Espalda Sana and the User will be governed by the current Spanish legislation, and any dispute will be submitted to the Courts of Badajoz, unless otherwise provided by law.",
+
+
+ "cookies_title": "🍪 Cookie Policy",
+  "cookies_last_update_label": "Last update:",
+  "cookies_last_update_date": "November 2025",
+
+  "cookies_section1_title": "1. What are cookies?",
+  "cookies_section1_content1_part1": "A cookie is a small text file stored in your browser when you visit almost any website.",
+  "cookies_section1_content1_part2": "Its purpose is to allow the website to remember your visit when you return.",
+  "cookies_section1_content1_part3": "Cookies can store technical information, personal preferences, content customization, usage statistics, links to social networks, access to user accounts, and more.",
+  "cookies_section1_content2": "The purpose of cookies is to adapt the website’s content to your profile and needs. Without cookies, the services offered by any website would be significantly reduced.",
+
+  "cookies_section2_title": "2. Cookies used on this website",
+  "cookies_section2_intro": "In accordance with the guidelines of the Spanish Data Protection Agency (AEPD), we detail below the use of cookies on this website:",
+  "cookies_section2_first_party_title": "First-party cookies",
+  "cookies_section2_first_party_label": "Session cookies:",
+  "cookies_section2_first_party_content": "They ensure that users posting comments on the blog are human and not automated applications, helping to fight spam.",
+  "cookies_section2_third_party_title": "Third-party cookies",
+  "cookies_section2_third_party_label1": "Google Analytics:",
+  "cookies_section2_third_party_content1_part1": "Stores cookies to generate statistics on website traffic and visitor volume.",
+  "cookies_section2_third_party_content1_part2": "By using this website, you consent to the processing of your information by Google.",
+  "cookies_section2_third_party_content1_part3": "You can consult the",
+  "cookies_section2_third_party_link": "Google Privacy Policy",
+  "cookies_section2_third_party_content1_part4": "to exercise your rights.",
+  "cookies_section2_third_party_label2": "Social networks:",
+  "cookies_section2_third_party_content2": "Each social network (Facebook, Instagram, YouTube, etc.) uses its own cookies to enable actions such as clicking 'Like' or sharing content.",
+
+  "cookies_section3_title": "3. Disable or delete cookies",
+  "cookies_section3_content1": "You can disable or delete cookies at any time through your browser settings. Each browser has a different procedure:",
+  "cookies_browser_chrome": "Google Chrome",
+  "cookies_browser_firefox": "Mozilla Firefox",
+  "cookies_browser_edge": "Microsoft Edge",
+  "cookies_browser_safari": "Safari",
+  "cookies_section3_content2": "In some cases, it is necessary to install cookies to remember your decision not to accept them.",
+
+  "cookies_section4_title": "4. Google Analytics cookies",
+  "cookies_section4_content_part1": "Google Analytics stores cookies on servers located in the United States and commits not to share data with third parties, except when necessary for system operation or by legal requirement.",
+  "cookies_section4_content_part2": "Google anonymizes the IP address and complies with the Safe Harbor Agreement, ensuring an adequate level of protection according to European regulations.",
+
+  "cookies_section5_title": "5. Additional notes",
+  "cookies_section5_content": "Neither this website nor its legal representatives are responsible for the content or accuracy of the privacy policies of third parties mentioned in this Cookie Policy.",
+
+   
+  "privacy_title": "🛡️ Privacy Policy",
+  "last_update": "Last update:",
+  "update_date": "November 2025",
+  "privacy_intro_1": "For Clínica Espalda Sana, the protection of your personal data is a priority. We process your data responsibly and in accordance with current data protection regulations, in particular the ",
+  "law_gdpr": "Regulation (EU) 2016/679 (GDPR)",
+  "privacy_intro_2": "the ",
+  "law_lopdgdd": "Organic Law 3/2018 on the Protection of Personal Data and guarantee of digital rights (LOPDGDD)",
+  "privacy_intro_3": "and the ",
+  "law_lssi": "Law 34/2002 on Information Society Services and Electronic Commerce (LSSI-CE)",
+  
+  "section_1_title": "1. Information about the data controller",
+  "responsable": "Controller:",
+  "responsable_name": "Clínica Espalda Sana",
+  "address": "Address:",
+  "address_value": "[Full address], Badajoz, Extremadura, Spain",
+  "contact_email": "Contact email:",
+  "email_address": "clinicaespaldasana@outlook.com",
+  "dpd_title": "Data Protection Officer (DPO):",
+  "dpd_text": "No data protection officer has been designated, as it is not mandatory according to Article 37 of the GDPR.",
+  
+  "section_2_title": "2. Information on data collection and purpose",
+  "web_usage_title": "(a) Informational use of the website",
+  "web_usage_desc": "If you use our website only for informational purposes, without registering or submitting forms, we only collect the data your browser automatically transmits when accessing our site:",
+  "ip_address": "Anonymized IP address",
+  "visit_time": "Date and time of access and duration of the visit",
+  "gmt_diff": "Time difference from GMT",
+  "requested_content": "Requested content (visited page)",
+  "access_status": "Access status / HTTP code",
+  "data_transferred": "Amount of data transferred",
+  "referrer": "Referring website",
+  "browser_info": "Browser, operating system and language",
+  "web_usage_use": "These data are used exclusively to ensure technical connection, system security, and improvement of our services.",
+  
+  "cookies_usage_title": "(b) Use of cookies",
+  "cookies_intro": "Cookies are small text files stored on your device when you visit our website. Some are essential for the operation of the site, while others help us improve your experience.",
+  "cookies_banner": "The first time you access the website, a cookie settings banner will appear allowing you to accept all cookies, reject non-essential ones, or configure them according to your preferences.",
+  "cookies_modify": "You can modify your choice at any time from the “Cookie settings” link available on the website.",
+  "cookies_types_title": "Types of cookies used:",
+  "cookie_essential": "Essential cookies: necessary for the basic operation of the site.",
+  "cookie_analytics": "Analytical cookies: help us understand how the site is used (e.g., using Matomo or Google Analytics).",
+  "cookie_third": "Third-party cookies: set by external services integrated (like YouTube or social networks).",
+  "cookies_delete": "You can delete cookies at any time from your browser settings. The use of cookies is carried out in accordance with Article 22.2 of Law 34/2002 (LSSI-CE).",
+  
+  "contact_forms_title": "(c) Contact forms",
+  "contact_forms_desc": "If you send us inquiries through a contact form, the data you provide (name, email, message, and other fields) will only be processed to respond to your request or manage the resulting relationship (Art. 6.1.a and 6.1.b of the GDPR). Your data will not be shared with third parties unless legally required.",
+  "contact_forms_revoke": "You can revoke your consent at any time by sending an email to",
+  "contact_email_link": "clinicaespaldasana@outlook.com",
+  
+  "newsletter_title": "(d) Newsletter",
+  "newsletter_desc": "If you subscribe to our newsletter, we use a double opt-in process: after registering, you will receive a confirmation email. If you do not confirm within 3 months, your data will be deleted.",
+  "newsletter_storage": "We will retain your email address until you unsubscribe, along with the registration date and IP, as proof of consent.",
+  "newsletter_unsubscribe": "You can unsubscribe at any time by writing to",
+  "newsletter_email_link": "clinicaespaldasana@outlook.com",
+  
+  "section_3_title": "3. User rights",
+  "user_rights_intro": "You have the right to:",
+  "right_access": "Access your personal data.",
+  "right_rectify": "Request its correction, deletion, or limitation of processing.",
+  "right_portability": "Exercise the right to data portability.",
+  "right_object": "Object at any time to the processing of your data.",
+  "right_withdraw": "Withdraw consent given, without affecting the lawfulness of prior processing.",
+  "complaint_intro": "If you believe your rights have been violated, you can file a complaint with the supervisory authority:",
+  "aepd_title": "Spanish Data Protection Agency (AEPD)",
+  "aepd_address": "C/ Jorge Juan, 6, 28001 Madrid",
+  "aepd_phone": "Phone: 900 293 183",
+  "aepd_email_label": "Email:",
+  "aepd_email": "ciudadano@aepd.es",
+  "aepd_website_label": "Website:",
+  "aepd_website": "www.aepd.es",
+  "exercise_rights": "To exercise your rights, you can write to us at",
+  "exercise_email": "clinicaespaldasana@outlook.com",
+  
+  "section_4_title": "4. Data security",
+  "security_text": "We adopt appropriate technical and organizational measures to protect your personal data against loss, destruction, unauthorized access, alteration, or improper disclosure.",
+  
+  "section_5_title": "5. Retention period",
+  "retention_text": "Personal data will be retained only for as long as strictly necessary for the purposes for which it was collected or as required by law. Once the purpose has been fulfilled or consent withdrawn, data will be securely deleted.",
+  
+  "section_6_title": "6. Use of analytics tools",
+  "matomo_title": "(a) Matomo (web analytics)",
+  "matomo_desc": "This site uses Matomo, a web analytics service provided by InnoCraft Ltd. Matomo is configured so that IP addresses are stored anonymously. Data is processed exclusively on servers located in the European Union. More information:",
+  "matomo_link": "https://matomo.org/privacy/",
+  "google_analytics_title": "(b) Google Analytics",
+  "google_analytics_desc": "We also use Google Analytics (Google Ireland Limited). Your IP address is anonymized within the EU before being transmitted to Google servers in the USA. Analytics cookies are only set if you have given your consent. You can revoke consent at any time via the cookie settings or using the Google Analytics opt-out add-on.",
+  "google_analytics_links": "More information:",
+  "google_privacy": "Google Privacy Policy",
+  "google_terms": "Google Analytics Terms of Service",
+  
+  "section_7_title": "7. Social media plugins",
+  "social_plugins_desc": "This website may include plugins from Facebook, Instagram, and YouTube (Meta Platforms and Google). When accessing a page containing these plugins, your browser establishes a direct connection with the servers of these providers. If you are logged into your accounts, the visit to our site may be associated with your profile. To avoid this, log out before visiting our site.",
+  "social_policies_title": "Privacy policies:",
+  "facebook_link": "Facebook: https://es-es.facebook.com/privacy/explanation",
+  "instagram_link": "Instagram: https://help.instagram.com/519522125107875/?helpref=hc_fnav",
+  "youtube_link": "YouTube / Google: https://policies.google.com/privacy?hl=es",
+  
+  "section_8_title": "8. Links to other websites",
+  "external_links_desc": "Our website may contain links to external pages. We are not responsible for their content or privacy policies. We recommend reviewing these policies when leaving our site.",
+  
+  "section_9_title": "9. Changes to this policy",
+  "policy_changes_desc": "We may update this Privacy Policy at any time for legal or technical reasons. Changes will be published on this page with a new update date. In case of substantial changes affecting the processing of your data, we will inform you promptly and, where appropriate, request your consent.",
+  
+  "section_10_title": "10. Notice about essential cookies",
+  "essential_cookies_desc": "For the operation of this website, we use essential cookies. In addition, we use optional cookies to optimize and personalize the user experience. You can accept all cookies or only the necessary ones. More information available in our",
+  "cookies_policy_link": "Cookies Policy"
+
+
 }
