--- a/api-clinic/locales/es.json
+++ b/api-clinic/locales/es.json
@@ -7,10 +7,10 @@
     "tagline": "Cuidamos tu espalda, mejoramos tu vida",
     "book_appointment": "Reservar una cita",
     "dr_name": "Dr. Aaron Hilis MB ChB BSc, MA, FRCS, PhD",
-    "profession_title": "Cirujano de columna",
-    "consultant_title": "Consultor en cirugía de columna",
-    "degree": "Maestría en medicina deportiva",
-    "role": "Profesor asociado",
+    "profession_title": "Cirujano de Columna",
+    "consultant_title": "Consultor en Cirugía de Columna",
+    "degree": "Máster en Medicina Deportiva",
+    "role": "Profesor Asociado",
     "team": "Equipo",
     "pathologies": "Patologías",
     "treatments": "Tratamientos",
@@ -73,7 +73,7 @@
     "subscribe_newsletter": "Suscríbete a nuestro boletín",
     "subscribe_button": "Suscribirse",
     "google_reviews": "Ver nuestras reseñas en Google",
-    "copyright": "&copy; 2025 Biziondo. Todos los derechos reservados.",
+    "copyright": "© 2025 Clínica de Espalda. Todos los derechos reservados.",
     "links": "Enlaces",
     "enter_name": "Introduce tu nombre",
     "home": "Inicio",
@@ -101,5 +101,195 @@
     "google_analytics_cookies_title": "Cookies de Google Analytics",
     "google_analytics_cookies_description": "En el caso de las cookies de Google Analytics, esta empresa las almacena en servidores ubicados en los Estados Unidos y se compromete a no compartirlas con terceros, excepto en los casos en que sea necesario para el funcionamiento del sistema o cuando la ley lo requiera. Según Google, no guarda tu dirección IP. Google Inc. es una empresa adherida al Acuerdo de Puerto Seguro, lo que garantiza que todos los datos transferidos se tratarán con un nivel de protección conforme a la normativa europea.",
     "cookie_policy_text": "Este sitio web utiliza cookies para asegurarte de obtener la mejor experiencia.",
-    "accept_cookies": "Aceptar"
+    "accept_cookies": "Aceptar",
+    
+
+    "legal_title": "⚖️ Aviso Legal",
+  "legal_last_update": "Última actualización:",
+  "legal_update_date": "noviembre de 2025",
+  "legal_intro_1": "Clínica Espalda Sana cumple con lo establecido en la ",
+  "legal_law_lssi": "Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y de Comercio Electrónico (LSSI-CE)",
+  "legal_intro_2": ", en el ",
+  "legal_law_gdpr": "Reglamento (UE) 2016/679 (RGPD)",
+  "legal_intro_3": " y en la ",
+  "legal_law_lopdgdd": "Ley Orgánica 3/2018, de Protección de Datos Personales y garantía de los derechos digitales (LOPDGDD)",
+  "legal_section_1_title": "1. Datos identificativos del titular del sitio web",
+  "owner": "Titular:",
+  "owner_name": "Clínica Espalda Sana",
+  "legal_address": "Domicilio:",
+  "legal_address_value": "[Dirección completa], Badajoz, Extremadura, España",
+  "legal_email": "Correo electrónico:",
+  "legal_email_address": "clinicaespaldasana@outlook.com",
+  "nif": "NIF:",
+  "nif_value": "[indicar NIF o CIF]",
+  "phone": "Teléfono:",
+  "phone_value": "[número de contacto]",
+  "health_registration": "Registro sanitario:",
+  "health_value": "[si aplica]",
+  "legal_section_2_title": "2. Condiciones de uso",
+  "terms_intro_1": "El acceso y uso del presente sitio web atribuye la condición de Usuario e implica la aceptación plena y sin reservas de las condiciones contenidas en este Aviso Legal.",
+  "terms_intro_2": "Si el usuario no está de acuerdo con las condiciones establecidas, deberá abstenerse de utilizar el sitio web.",
+  "terms_intro_3": "El Usuario se compromete a hacer un uso adecuado de los contenidos y servicios que Clínica Espalda Sana ofrece y a no emplearlos para actividades ilícitas o contrarias a la buena fe y al orden público.",
+  "legal_section_3_title": "3. Propiedad intelectual e industrial",
+  "intellectual_property": "Todos los contenidos del sitio web (textos, imágenes, logotipos, iconos, software, etc.) son propiedad de Clínica Espalda Sana o de sus respectivos autores, y están protegidos por la normativa nacional e internacional sobre propiedad intelectual e industrial. Queda prohibida su reproducción, distribución o modificación sin autorización expresa.",
+  "legal_section_4_title": "4. Protección de datos personales",
+  "personal_data_intro": "Clínica Espalda Sana garantiza el cumplimiento de la normativa vigente en materia de protección de datos personales. Los datos personales que se recaben a través del sitio web se tratarán conforme a lo establecido en la ",
+  "privacy_policy_link": "Política de Privacidad",
+  "legal_legal_section_5_title": "5. Exclusión de responsabilidad",
+  "disclaimer": "Clínica Espalda Sana no se responsabiliza de los daños o perjuicios que pudieran derivarse del uso indebido del sitio web, ni de los contenidos de los enlaces externos que pudieran incluirse. Tampoco garantiza la disponibilidad continua del sitio o la ausencia de errores técnicos.",
+  "legal_section_6_title": "6. Legislación aplicable y jurisdicción",
+  "law_jurisdiction": "La relación entre Clínica Espalda Sana y el Usuario se regirá por la legislación española vigente, y cualquier controversia se someterá a los Juzgados y Tribunales de Badajoz, salvo disposición legal en contrario.",
+
+
+
+
+    "cookies_title": "🍪 Política de Cookies",
+  "cookies_last_update_label": "Última actualización:",
+  "cookies_last_update_date": "noviembre de 2025",
+
+  "cookies_section1_title": "1. ¿Qué son las cookies?",
+  "cookies_section1_content1_part1": "Una cookie es un pequeño archivo de texto que se almacena en tu navegador cuando visitas casi cualquier sitio web.",
+  "cookies_section1_content1_part2": "Su propósito es permitir que el sitio web recuerde tu visita cuando regreses.",
+  "cookies_section1_content1_part3": "Las cookies pueden almacenar información técnica, preferencias personales, personalización de contenido, estadísticas de uso, enlaces a redes sociales, acceso a cuentas de usuario y más.",
+  "cookies_section1_content2": "El objetivo de las cookies es adaptar el contenido del sitio web a tu perfil y necesidades. Sin cookies, los servicios ofrecidos por cualquier sitio web se reducirían considerablemente.",
+
+  "cookies_section2_title": "2. Cookies utilizadas en este sitio web",
+  "cookies_section2_intro": "De acuerdo con las directrices de la Agencia Española de Protección de Datos (AEPD), detallamos a continuación el uso de cookies en este sitio web:",
+  "cookies_section2_first_party_title": "Cookies de primera parte",
+  "cookies_section2_first_party_label": "Cookies de sesión:",
+  "cookies_section2_first_party_content": "Aseguran que los usuarios que publican comentarios en el blog sean humanos y no aplicaciones automatizadas, ayudando a combatir el spam.",
+  "cookies_section2_third_party_title": "Cookies de terceros",
+  "cookies_section2_third_party_label1": "Google Analytics:",
+  "cookies_section2_third_party_content1_part1": "Almacena cookies para generar estadísticas sobre el tráfico del sitio web y el volumen de visitantes.",
+  "cookies_section2_third_party_content1_part2": "Al usar este sitio web, consientes el procesamiento de tu información por parte de Google.",
+  "cookies_section2_third_party_content1_part3": "Puedes consultar la",
+  "cookies_section2_third_party_link": "Política de privacidad de Google",
+  "cookies_section2_third_party_content1_part4": "para ejercer tus derechos.",
+  "cookies_section2_third_party_label2": "Redes sociales:",
+  "cookies_section2_third_party_content2": "Cada red social (Facebook, Instagram, YouTube, etc.) utiliza sus propias cookies para habilitar acciones como hacer clic en 'Me gusta' o compartir contenido.",
+
+  "cookies_section3_title": "3. Deshabilitar o eliminar cookies",
+  "cookies_section3_content1": "Puedes deshabilitar o eliminar las cookies en cualquier momento mediante la configuración de tu navegador. Cada navegador tiene un procedimiento distinto:",
+  "cookies_browser_chrome": "Google Chrome",
+  "cookies_browser_firefox": "Mozilla Firefox",
+  "cookies_browser_edge": "Microsoft Edge",
+  "cookies_browser_safari": "Safari",
+  "cookies_section3_content2": "En algunos casos, es necesario instalar cookies para recordar tu decisión de no aceptarlas.",
+
+  "cookies_section4_title": "4. Cookies de Google Analytics",
+  "cookies_section4_content_part1": "Google Analytics almacena cookies en servidores ubicados en Estados Unidos y se compromete a no compartir los datos con terceros, salvo cuando sea necesario para el funcionamiento del sistema o por exigencia legal.",
+  "cookies_section4_content_part2": "Google anonimiza la dirección IP y cumple con el Acuerdo de Puerto Seguro, garantizando un nivel de protección adecuado según la normativa europea.",
+
+  "cookies_section5_title": "5. Notas adicionales",
+  "cookies_section5_content": "Ni este sitio web ni sus representantes legales se responsabilizan del contenido o la precisión de las políticas de privacidad de terceros mencionadas en esta Política de Cookies.",
+
+
+
+  
+  "privacy_title": "🛡️ Política de Privacidad",
+  "last_update": "Última actualización:",
+  "update_date": "noviembre de 2025",
+  "privacy_intro_1": "Para Clínica Espalda Sana, la protección de sus datos personales es una prioridad. Tratamos sus datos de manera responsable y conforme a la normativa vigente en materia de protección de datos, en particular el ",
+  "law_gdpr": "Reglamento (UE) 2016/679 (RGPD)",
+  "privacy_intro_2": "la ",
+  "law_lopdgdd": "Ley Orgánica 3/2018, de Protección de Datos Personales y garantía de los derechos digitales (LOPDGDD)",
+  "privacy_intro_3": "y la ",
+  "law_lssi": "Ley 34/2002, de Servicios de la Sociedad de la Información y de Comercio Electrónico (LSSI-CE)",
+  
+  "section_1_title": "1. Información sobre el responsable del tratamiento",
+  "responsable": "Responsable:",
+  "responsable_name": "Clínica Espalda Sana",
+  "address": "Dirección:",
+  "address_value": "[Dirección completa], Badajoz, Extremadura, España",
+  "contact_email": "Correo electrónico de contacto:",
+  "email_address": "clinicaespaldasana@outlook.com",
+  "dpd_title": "Delegado de Protección de Datos (DPD):",
+  "dpd_text": "No se ha designado delegado de protección de datos, al no ser obligatorio conforme al artículo 37 del RGPD.",
+  
+  "section_2_title": "2. Información sobre la recogida y finalidad del tratamiento de datos",
+  "web_usage_title": "(a) Uso informativo del sitio web",
+  "web_usage_desc": "Si utiliza nuestro sitio web únicamente con fines informativos, sin registrarse ni enviar formularios, solo recopilamos los datos que su navegador transmite de forma automática al acceder a nuestro sitio:",
+  "ip_address": "Dirección IP anonimizada",
+  "visit_time": "Fecha y hora de acceso y duración de la visita",
+  "gmt_diff": "Diferencia horaria con respecto a GMT",
+  "requested_content": "Contenido solicitado (página visitada)",
+  "access_status": "Estado de acceso / código HTTP",
+  "data_transferred": "Cantidad de datos transferidos",
+  "referrer": "Sitio web de origen (referente)",
+  "browser_info": "Navegador, sistema operativo e idioma",
+  "web_usage_use": "Estos datos se utilizan exclusivamente para garantizar la conexión técnica, la seguridad del sistema y la mejora de nuestros servicios.",
+  
+  "cookies_usage_title": "(b) Uso de cookies",
+  "cookies_intro": "Las cookies son pequeños archivos de texto que se almacenan en su dispositivo cuando visita nuestro sitio web. Algunas son esenciales para el funcionamiento del sitio, mientras que otras nos ayudan a mejorar su experiencia.",
+  "cookies_banner": "Al acceder por primera vez al sitio web, se mostrará un banner de configuración de cookies que le permitirá aceptar todas las cookies, rechazar las no esenciales o configurarlas según sus preferencias.",
+  "cookies_modify": "Puede modificar su elección en cualquier momento desde el enlace “Configuración de cookies” disponible en el sitio web.",
+  "cookies_types_title": "Tipos de cookies utilizadas:",
+  "cookie_essential": "Cookies esenciales: necesarias para el funcionamiento básico del sitio.",
+  "cookie_analytics": "Cookies analíticas: nos ayudan a entender cómo se usa el sitio (por ejemplo, mediante Matomo o Google Analytics).",
+  "cookie_third": "Cookies de terceros: establecidas por servicios externos integrados (como YouTube o redes sociales).",
+  "cookies_delete": "Puede eliminar las cookies en cualquier momento desde la configuración de su navegador. El uso de cookies se realiza conforme al artículo 22.2 de la Ley 34/2002 (LSSI-CE).",
+  
+  "contact_forms_title": "(c) Formularios de contacto",
+  "contact_forms_desc": "Si nos envía consultas a través de un formulario de contacto, los datos que nos proporcione (nombre, correo electrónico, mensaje y otros campos) se tratarán únicamente para responder a su solicitud o gestionar la relación derivada (art. 6.1.a y 6.1.b del RGPD). Sus datos no se cederán a terceros salvo obligación legal.",
+  "contact_forms_revoke": "Puede revocar su consentimiento en cualquier momento enviando un correo a",
+  "contact_email_link": "clinicaespaldasana@outlook.com",
+  
+  "newsletter_title": "(d) Boletín informativo (Newsletter)",
+  "newsletter_desc": "Si se suscribe a nuestro boletín, utilizamos un procedimiento de doble opt-in: tras registrarse, recibirá un correo de confirmación. Si no confirma en un plazo de 3 meses, sus datos serán eliminados.",
+  "newsletter_storage": "Conservaremos su dirección de correo electrónico hasta que se dé de baja, junto con la fecha e IP del registro, como prueba de consentimiento.",
+  "newsletter_unsubscribe": "Puede darse de baja en cualquier momento escribiendo a",
+  "newsletter_email_link": "clinicaespaldasana@outlook.com",
+  
+  "section_3_title": "3. Derechos de los usuarios",
+  "user_rights_intro": "Usted tiene derecho a:",
+  "right_access": "Acceder a sus datos personales.",
+  "right_rectify": "Solicitar su rectificación, supresión o limitación del tratamiento.",
+  "right_portability": "Ejercer el derecho a la portabilidad de los datos.",
+  "right_object": "Oponerse en cualquier momento al tratamiento de sus datos.",
+  "right_withdraw": "Retirar el consentimiento otorgado, sin que ello afecte a la licitud del tratamiento previo.",
+  "complaint_intro": "Si considera que sus derechos han sido vulnerados, puede presentar una reclamación ante la autoridad de control:",
+  "aepd_title": "Agencia Española de Protección de Datos (AEPD)",
+  "aepd_address": "C/ Jorge Juan, 6, 28001 Madrid",
+  "aepd_phone": "Teléfono: 900 293 183",
+  "aepd_email_label": "Correo electrónico:",
+  "aepd_email": "ciudadano@aepd.es",
+  "aepd_website_label": "Sitio web:",
+  "aepd_website": "www.aepd.es",
+  "exercise_rights": "Para ejercer sus derechos, puede escribirnos a",
+  "exercise_email": "clinicaespaldasana@outlook.com",
+  
+  "section_4_title": "4. Seguridad de los datos",
+  "security_text": "Adoptamos medidas técnicas y organizativas adecuadas para proteger sus datos personales frente a pérdida, destrucción, acceso no autorizado, alteración o divulgación indebida.",
+  
+  "section_5_title": "5. Plazo de conservación",
+  "retention_text": "Los datos personales se conservarán durante el tiempo estrictamente necesario para los fines para los que fueron recopilados o mientras sea necesario para cumplir con obligaciones legales. Una vez cumplida la finalidad o revocado el consentimiento, los datos serán eliminados de forma segura.",
+  
+  "section_6_title": "6. Uso de herramientas de análisis",
+  "matomo_title": "(a) Matomo (análisis web)",
+  "matomo_desc": "Este sitio utiliza Matomo, un servicio de análisis web proporcionado por InnoCraft Ltd. Matomo se configura de manera que las direcciones IP se almacenan de forma anonimizada. Los datos se procesan exclusivamente en servidores ubicados en la Unión Europea. Más información:",
+  "matomo_link": "https://matomo.org/privacy/",
+  "google_analytics_title": "(b) Google Analytics",
+  "google_analytics_desc": "También utilizamos Google Analytics (Google Ireland Limited). Su dirección IP se anonimiza dentro de la UE antes de ser transmitida a los servidores de Google en EE. UU. Solo se instalarán cookies de análisis si usted ha dado su consentimiento. Puede revocar dicho consentimiento en cualquier momento a través de la configuración de cookies o mediante el complemento de desactivación de Google Analytics.",
+  "google_analytics_links": "Más información:",
+  "google_privacy": "Política de privacidad de Google",
+  "google_terms": "Términos de servicio de Google Analytics",
+  
+  "section_7_title": "7. Complementos de redes sociales",
+  "social_plugins_desc": "Este sitio web puede incluir complementos de Facebook, Instagram y YouTube (Meta Platforms y Google). Al acceder a una página que contiene estos complementos, su navegador establece una conexión directa con los servidores de dichos proveedores. Si ha iniciado sesión en sus cuentas, la visita a nuestro sitio puede asociarse con su perfil. Para evitarlo, cierre sesión antes de visitar nuestro sitio.",
+  "social_policies_title": "Políticas de privacidad:",
+  "facebook_link": "Facebook: https://es-es.facebook.com/privacy/explanation",
+  "instagram_link": "Instagram: https://help.instagram.com/519522125107875/?helpref=hc_fnav",
+  "youtube_link": "YouTube / Google: https://policies.google.com/privacy?hl=es",
+  
+  "section_8_title": "8. Enlaces a otros sitios web",
+  "external_links_desc": "Nuestro sitio web puede contener enlaces a páginas externas. No somos responsables de sus contenidos ni de sus políticas de privacidad. Le recomendamos revisar dichas políticas al abandonar nuestro sitio.",
+  
+  "section_9_title": "9. Modificaciones de esta política",
+  "policy_changes_desc": "Podemos actualizar esta Política de Privacidad en cualquier momento, por motivos legales o técnicos. Las modificaciones se publicarán en esta página con una nueva fecha de actualización. En caso de cambios sustanciales que afecten al tratamiento de sus datos, le informaremos oportunamente y, cuando proceda, solicitaremos su consentimiento.",
+  
+  "section_10_title": "10. Aviso sobre cookies esenciales",
+  "essential_cookies_desc": "Para el funcionamiento de este sitio web utilizamos cookies esenciales. Además, empleamos cookies opcionales para optimizar y personalizar la experiencia del usuario. Puede aceptar todas las cookies o solo las necesarias. Más información disponible en nuestra",
+  "cookies_policy_link": "Política de Cookies"
+
+
 }
