--- a/api-clinic/locales/fr.json
+++ b/api-clinic/locales/fr.json
@@ -9,5 +9,5 @@
     "tagline": "Cuidamos tu espalda, mejoramos tu vida",
     "book_appointment": "Reservar una cita",
     "dr_name": "Dr. Aaron Hilis MB ChB BSc, MA, FRCS, PhD",
-    "profession_title": "Cirujano de columna"
+    "profession_title": "Cirujano de Columna"
 }
